--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                                     <li>Runs Chromium OS</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce8c657" data-tranw="">Order Now</a></div>
+                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" action="" data-unique-page="620c9fce8c657" data-tranw="">Order Now</a></div>
                            </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
