--- a/jobs/index.html
+++ b/jobs/index.html
@@ -527,13 +527,12 @@
 										</div>
 										<div aria-labelledby="responsibilities-head--364445036" class="panel-collapse collapse" id="responsibilities--364445036" role="tabpanel">
 											<div class="panel-body responsive-handler fr-view breakable box-text-primary">
-												<label for="lname">Last name:</label><br>
+												<input type="text" id="lname" name="lname">
 											</div>
 										</div>
 									</div>
 								</div>
-								<form action="https://formspree.io/f/xeqnggrl" method="">
-									<a class="jobsApplyBtn btn btn-primary" data-module-id="620ca974d6c68" data-unique-id="620ca974deae2" data-website-id="5985208">Apply Now</a>
+									<button type="submit" class="btn btn-primary" data-module-id="620ca974d6c68" data-unique-id="620ca974deae2" data-website-id="5985208">Apply Now</button>
 								</form>
 							</div>
 						</div><!-- /.row -->
