--- a/jobs/index.html
+++ b/jobs/index.html
@@ -510,7 +510,7 @@
 									</div>
 									<div class="panel box box-primary s123-box-border" style="background-color: transparent;">
 										<div class="heading" data-parent="#accordion--364445036" data-target="#benefits--364445036" data-toggle="collapse" id="benefits-head--364445036" role="tab" style="cursor:pointer">
-											<input type="email" id="Email"name="Email" placeholder="Email" required="required" />
+											<input type="email" id="Email" name="Email" placeholder="Email" required="required" />
 										</div>
 										<div aria-labelledby="benefits-head--364445036" class="panel-collapse collapse" id="benefits--364445036" role="tabpanel">
 											
@@ -518,7 +518,7 @@
 									</div>
 									<div class="panel box box-primary s123-box-border" style="background-color: transparent;">
 										<div class="heading" data-parent="#accordion--364445036" data-target="#responsibilities--364445036" data-toggle="collapse" id="responsibilities-head--364445036" role="tab" style="cursor:pointer">
-											<input type="text" id="phone" name="phone" placeholder="Phone Number">
+											<input type="tel" id="phone" name="phone" placeholder="Phone number: " required>
 										</div>
 										<div aria-labelledby="responsibilities-head--364445036" class="panel-collapse collapse" id="responsibilities--364445036" role="tabpanel">
 											
