--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                                     <li>256GB SSD Storage</li>
                                     <li>AMD Radeon Vega 8 Graphics</li>
                                     <li>15.6&quot; 1920 x 1080 display</li>
-                                    <li>Runs Windows 11 home</li>
+                                    <li>Runs Windows 11 Home</li>
                                  </ul>
                               </div>
                               <div class="pricing-m-action">
