--- a/index.html
+++ b/index.html
@@ -630,11 +630,7 @@
                                     <li>Runs Chromium OS</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action">
-				      <form action="https://formspree.io/f/xoqrdwdd" method="POST">
-					      <input type="hidden" id="Product" name="postId" value="V2">
-					      <button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
-				      </form></div>
+                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" action="" data-unique-page="620c9fce8c657" data-tranw="">Order Now</a></div>
                            </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
@@ -653,11 +649,8 @@
                                     <li>Runs Chromium OS</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action">
-				      <form action="https://formspree.io/f/xoqrdwdd" method="POST">
-					      <input type="hidden" id="Product" name="postId" value="V3">
-					      <button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
-				      </form></div>
+                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl order-pricing-table-btn" data-module="620c9fcdd6c05" data-unique-page="620c9fce86ece" data-tranw="">Order Now</a></div>
+                           </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
                            <div class="pricing-m-box  preview-highlighter" data-unique-id="620c9fce818b5">
@@ -676,11 +669,8 @@
                                     <li>Runs Windows 11 home</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action">
-				      <form action="https://formspree.io/f/xoqrdwdd" method="POST">
-					      <input type="hidden" id="Product" name="postId" value="V4">
-					      <button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
-				      </form></div>
+                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl order-pricing-table-btn" data-module="620c9fcdd6c05" data-unique-page="620c9fce818b5" data-tranw="">Order Now</a></div>
+                           </div>
                         </div>
                      </div>
                   </div>
