--- a/index.html
+++ b/index.html
@@ -631,10 +631,7 @@
                                  </ul>
                               </div>
                               <div class="pricing-m-action">
-				      <form action="https://formspree.io/f/xoqrdwdd" method="POST">
-					      <input type="hidden" id="Product" name="postId" value="V2">
-					      <button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
-				      </form></div>
+					<form action="https://formspree.io/f/xoqrdwdd" method="POST"><button name="Product" value="Windbook V2" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>				</div>
                            </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
@@ -654,10 +651,8 @@
                                  </ul>
                               </div>
                               <div class="pricing-m-action">
-				      <form action="https://formspree.io/f/xoqrdwdd" method="POST">
-					      <input type="hidden" id="Product" name="postId" value="V3">
-					      <button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
-				      </form></div>
+					      <button name="Product" value="Windbook V3" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
+				      </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
                            <div class="pricing-m-box  preview-highlighter" data-unique-id="620c9fce818b5">
@@ -677,9 +672,7 @@
                                  </ul>
                               </div>
                               <div class="pricing-m-action">
-				      <form action="https://formspree.io/f/xoqrdwdd" method="POST">
-					      <input type="hidden" id="Product" name="postId" value="V4">
-					      <button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
+					      <button name="Product" value="Windbook V3" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
 				      </form></div>
                         </div>
                      </div>
