--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <link rel="dns-prefetch preconnect" href="https://static.s123-cdn-static-d.com" crossorigin="anonymous"/>
       <link rel="preload" href="https://static1.s123-cdn-static-a.com/ready_uploads/media/34155/2000_5cde6e763c693.jpg" as="image">
       <!-- Favicon --> 
-      <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-      <link rel="icon" href="logo.png" type="image/x-icon">
+      <link rel="shortcut icon" href="https://cdn-cms-s.f-static.net/manager/websites/site123_website/files/logos/brand_files_2020/Icons/Png/Icon_blue.png?v=n8158" type="image/x-icon">
+      <link rel="icon" href="https://cdn-cms-s.f-static.net/manager/websites/site123_website/files/logos/brand_files_2020/Icons/Png/Icon_blue.png?v=n8158" type="image/x-icon">
       <link rel="manifest" href="https://cdn-cms-s.f-static.net/versions/2/css/manifest.json?w=&orderScreen=&websiteID=5985208&onlyContent=&tranW=&v=css_n152_31566608&wd=620c814d418f3.site123.me">
       <!-- Status Bar -->
       <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -32,7 +32,7 @@
       <meta name="keywords" content="" class="s123-js-pjax">
       <link rel="canonical" href="https://620c814d418f3.site123.me/" class="s123-js-pjax"/>
       <!-- Global site tag (gtag.js) - Google Analytics --> <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171296505-1"></script> <script>      window.dataLayer = window.dataLayer || [];
-         function gtag(){dataLayer.push(arguments);}had
+         function gtag(){dataLayer.push(arguments);}
          gtag('js', new Date());
          
          gtag('config', 'UA-171296505-1');
@@ -381,147 +381,7 @@
       </style>
       <!-- Custom CSS --> <!-- Minimize CSS files -->
       <link rel="stylesheet" href="https://cdn-cms-s.f-static.net/versions/2/css/minimize_main.css?v=n8158" type="text/css" crossorigin="anonymous">
-      <style>
-         .s123-module-pricing-tables.layout-1 .pricing-m {
-         position:relative;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-] {
-         margin-top:20px;
-         }
-         @media (min-width:768px) {
-         .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-] {
-         padding:0;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:first-child {
-         padding-left:15px;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:last-child {
-         padding-right:15px;
-         }
-         html[dir="rtl"] .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:first-child {
-         padding-left:0;
-         padding-right:15px;
-         }
-         html[dir="rtl"] .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:last-child {
-         padding-right:0;
-         padding-left:15px;
-         }
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-box {
-         position:relative;
-         border:1px solid rgba(0,0,0,.075);
-         border-radius:3px;
-         text-align:center;
-         box-shadow:0 1px 1px rgba(0,0,0,.1);
-         background-color:#F5F5F5;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-title {
-         padding:15px 0;
-         background-color:#F9F9F9;
-         border-radius:3px 3px 0 0;
-         text-shadow:1px 1px 1px #FFF;
-         border-bottom:1px solid rgba(0,0,0,.05);
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-title h3 {
-         margin:0;
-         font-size:20px;
-         letter-spacing:1px;
-         font-weight:700;
-         text-transform:uppercase;
-         color:#555;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-title span {
-         display:block;
-         color:#999;
-         font-weight:300;
-         font-size:14px;
-         margin-top:3px;
-         text-transform:uppercase;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-price {
-         position:relative;
-         padding:25px 0;
-         color:#333;
-         font-weight:300;
-         font-size:64px;
-         line-height:1;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-price:after {
-         content:'';
-         position:absolute;
-         width:100px;
-         border-top:1px solid rgba(0,0,0,.1);
-         top:auto;
-         bottom:0;
-         left:50%;
-         margin-left:-50px;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-price span {
-         display:inline-block;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-price span.pricing-m-price-value {
-         vertical-align:top;
-         margin:7px 3px 0 0;
-         font-size:28px;
-         font-weight:400;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-price span.pricing-m-price-period {
-         vertical-align:baseline;
-         font-size:16px;
-         font-weight:400;
-         color:#999;
-         margin:0 0 0 3px;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-features {
-         border-bottom:1px solid rgba(0,0,0,.075);
-         padding:0 10px;
-         }
-         .s123-module-pricing-tables.layout-1 .pricing-m-features ul {
-         margin:0;
-         padding:15px 0;
-         list-style:none;
-         }
-	 .s123-module-pricing-tables.layout-1 .pricing-m-features li {
-		 padding:6px 0;
-		 font-size:14px;
-		 color:#000;
-	      }
-	      .s123-module-pricing-tables.layout-1 .pricing-m-action {
-		      padding:15px 30px;
-	      }
-	      .s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular {
-		      background-color:#FFF;
-		      box-shadow:0 0 8px rgba(0,0,0,.1);
-		      z-index:1;
-	      }
-	      @media (min-width:970px) {
-		      .s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular {
-			      margin:-20px -1px 0;
-		      }
-	      }
-	      .s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular .pricing-m-title {
-		      background-color:#FFF;
-		      padding:20px 0;
-	      }
-	      .s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular .pricing-m-price {
-		      color:#1ABC9C;
-		      font-size:72px;
-	      }
-	      .s123-module-pricing-tables.layout-2 .container {
-		      text-align:center;
-	      }
-	      .s123-module-pricing-tables.layout-2 .plan-container {
-		      margin-top:81px;
-		      border:1px solid #e5e5e5;
-	      }
-	      @media (min-width:970px) {
-		      .s123-module-pricing-tables.layout-2 .popular {
-			      margin-top:59px;
-		      }
-	      }
-	      .s123-module-pricing-tables.layout-2 .plan-container .price {
-		      font-size:30px;-webkit-border-radius:100%;-moz-border-radius:100%;border-radius:100%;display:block;width:120px;height:120px;line-height:105px;margin:0 auto;margin-top:-120px;position:relative;margin-bottom:10px;}.s123-module-pricing-tables.layout-2 .plan-container .period {margin-top:-83px;font-size:18px;display:block;}.s123-module-pricing-tables.layout-2 .plan-name h3 {color:#555;}.s123-module-pricing-tables.layout-2 .plan-container .plan-name {padding-top:50px;padding-bottom:10px;}.s123-module-pricing-tables.layout-2 .plan-name {background-color:#e8e8e8;}.s123-module-pricing-tables.layout-2 .plan-container .plan-features {padding:10px;}.s123-module-pricing-tables.layout-2 .plan-container .plan-features ul {margin:0;padding:0;list-style:none;}.s123-module-pricing-tables.layout-2 .plan-container .plan-features ul li {padding:13px 0;list-style:none;}.s123-module-pricing-tables.layout-2 .plan-button .btn {padding-top:10px;padding-bottom:10px;}
-      </style>
+      <style>.s123-module-pricing-tables.layout-1 .pricing-m {position:relative;}.s123-module-pricing-tables.layout-1 .pricing-m [class^=col-] {margin-top:20px;}@media (min-width:768px) {.s123-module-pricing-tables.layout-1 .pricing-m [class^=col-] {padding:0;}.s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:first-child {padding-left:15px;}.s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:last-child {padding-right:15px;}html[dir="rtl"] .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:first-child {padding-left:0;padding-right:15px;}html[dir="rtl"] .s123-module-pricing-tables.layout-1 .pricing-m [class^=col-]:last-child {padding-right:0;padding-left:15px;}}.s123-module-pricing-tables.layout-1 .pricing-m-box {position:relative;border:1px solid rgba(0,0,0,.075);border-radius:3px;text-align:center;box-shadow:0 1px 1px rgba(0,0,0,.1);background-color:#F5F5F5;}.s123-module-pricing-tables.layout-1 .pricing-m-title {padding:15px 0;background-color:#F9F9F9;border-radius:3px 3px 0 0;text-shadow:1px 1px 1px #FFF;border-bottom:1px solid rgba(0,0,0,.05);}.s123-module-pricing-tables.layout-1 .pricing-m-title h3 {margin:0;font-size:20px;letter-spacing:1px;font-weight:700;text-transform:uppercase;color:#555;}.s123-module-pricing-tables.layout-1 .pricing-m-title span {display:block;color:#999;font-weight:300;font-size:14px;margin-top:3px;text-transform:uppercase;}.s123-module-pricing-tables.layout-1 .pricing-m-price {position:relative;padding:25px 0;color:#333;font-weight:300;font-size:64px;line-height:1;}.s123-module-pricing-tables.layout-1 .pricing-m-price:after {content:'';position:absolute;width:100px;border-top:1px solid rgba(0,0,0,.1);top:auto;bottom:0;left:50%;margin-left:-50px;}.s123-module-pricing-tables.layout-1 .pricing-m-price span {display:inline-block;}.s123-module-pricing-tables.layout-1 .pricing-m-price span.pricing-m-price-value {vertical-align:top;margin:7px 3px 0 0;font-size:28px;font-weight:400;}.s123-module-pricing-tables.layout-1 .pricing-m-price span.pricing-m-price-period {vertical-align:baseline;font-size:16px;font-weight:400;color:#999;margin:0 0 0 3px;}.s123-module-pricing-tables.layout-1 .pricing-m-features {border-bottom:1px solid rgba(0,0,0,.075);padding:0 10px;}.s123-module-pricing-tables.layout-1 .pricing-m-features ul {margin:0;padding:15px 0;list-style:none;}.s123-module-pricing-tables.layout-1 .pricing-m-features li {padding:6px 0;font-size:14px;color:#000;}.s123-module-pricing-tables.layout-1 .pricing-m-action {padding:15px 30px;}.s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular {background-color:#FFF;box-shadow:0 0 8px rgba(0,0,0,.1);z-index:1;}@media (min-width:970px) {.s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular {margin:-20px -1px 0;}}.s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular .pricing-m-title {background-color:#FFF;padding:20px 0;}.s123-module-pricing-tables.layout-1 .pricing-m-box.pricing-m-popular .pricing-m-price {color:#1ABC9C;font-size:72px;}.s123-module-pricing-tables.layout-2 .container {text-align:center;}.s123-module-pricing-tables.layout-2 .plan-container {margin-top:81px; border:1px solid #e5e5e5;}@media (min-width:970px) {.s123-module-pricing-tables.layout-2 .popular {margin-top:59px;}}.s123-module-pricing-tables.layout-2 .plan-container .price {font-size:30px;-webkit-border-radius:100%;-moz-border-radius:100%;border-radius:100%;display:block;width:120px;height:120px;line-height:105px;margin:0 auto;margin-top:-120px;position:relative;margin-bottom:10px;}.s123-module-pricing-tables.layout-2 .plan-container .period {margin-top:-83px;font-size:18px;display:block;}.s123-module-pricing-tables.layout-2 .plan-name h3 {color:#555;}.s123-module-pricing-tables.layout-2 .plan-container .plan-name {padding-top:50px;padding-bottom:10px;}.s123-module-pricing-tables.layout-2 .plan-name {background-color:#e8e8e8;}.s123-module-pricing-tables.layout-2 .plan-container .plan-features {padding:10px;}.s123-module-pricing-tables.layout-2 .plan-container .plan-features ul {margin:0;padding:0;list-style:none;}.s123-module-pricing-tables.layout-2 .plan-container .plan-features ul li {padding:13px 0;list-style:none;}.s123-module-pricing-tables.layout-2 .plan-button .btn {padding-top:10px;padding-bottom:10px;}</style>
       <link rel="stylesheet" href="https://cdn-cms-s.f-static.net/versions/2/css/websiteCSS.css?w=&orderScreen=&websiteID=5985208&onlyContent=&tranW=&v=css_n152_31566608" class="reloadable-css" type="text/css">
       <!-- Froala Editor CSS --> <!-- Google AdSense --> 
    </head>
@@ -630,8 +490,7 @@
                                     <li>Runs Chromium OS</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action">
-					<form action="https://formspree.io/f/xoqrdwdd" method="POST"><button name="Product" value="Windbook V2" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>				</div>
+                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl order-pricing-table-btn" data-module="620c9fcdd6c05" data-unique-page="620c9fce8c657" data-tranw="">Order Now</a></div>
                            </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
@@ -650,9 +509,8 @@
                                     <li>Runs Chromium OS</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action">
-					      <button name="Product" value="Windbook V3" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
-				      </div>
+                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl order-pricing-table-btn" data-module="620c9fcdd6c05" data-unique-page="620c9fce86ece" data-tranw="">Order Now</a></div>
+                           </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
                            <div class="pricing-m-box  preview-highlighter" data-unique-id="620c9fce818b5">
@@ -671,9 +529,8 @@
                                     <li>Runs Windows 11 home</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action">
-					      <button name="Product" value="Windbook V3" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" type="submit" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button>
-				      </form></div>
+                              <div class="pricing-m-action"><a class="btn btn-primary btn-block btn-xl order-pricing-table-btn" data-module="620c9fcdd6c05" data-unique-page="620c9fce818b5" data-tranw="">Order Now</a></div>
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -686,6 +543,7 @@
                         <div> <span class="footer_name website-name-preview-helper">Windmill Inc</span> </div>
                         <div>                                Copyright © 2022 All rights reserved
                         </div>
+                        <div class="clearfix upgrade-website-preview-helper">Powered By <a rel="nofollow" target="_blank" href="https://www.site123.com">SITE123</a> - <a rel="nofollow" target="_blank" href="https://www.site123.com">Create your own website</a></div>
                      </div>
                      <div class="side2 col-xs-12 col-sm-6 col-md-6">
                         <ul class="navPages nav navbar-nav hidden-xs">
@@ -713,9 +571,10 @@
             <input type="hidden" id="multiPhonesSettings" value="[{&quot;uniqid&quot;:&quot;mp-620c9eadd6bb5&quot;,&quot;number&quot;:&quot;0274170331&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;&quot;,&quot;note&quot;:&quot;CEO&quot;,&quot;type&quot;:&quot;1&quot;}]"> 
          </div>
       </div>
+      <div id="showSmallAdOnScroll" class="upgrade-website-preview-helper style2 static"><a rel="nofollow" target="_blank" href="https://www.site123.com/?utm_source=user-website&utm_medium=powered-by-ad-en&utm_content=all&utm_campaign=all"><span class="s123-b-b-s-1">I BUILT MY SITE FOR FREE USING</span> <img src="https://cdn-cms-s.f-static.net/manager/websites/site123_website/files/logos/brand_files_2020/Logo/Horizontal/PNG/Horizontal_Black.png?v=n8158" style="height:21px;width:auto;vertical-align:middle;">&nbsp;&nbsp;&nbsp;<span class="site123link hidden-xs">CREATE YOUR WEBSITE</span></a></div>
       <input type="hidden" id="layoutNUM" name="layoutNUM" value="1"> <input type="hidden" id="footer_layout" name="footer_layout" value="1"> <input type="hidden" id="layoutMenuPositionTXT" name="layoutMenuPositionTXT" value="top"> <input type="hidden" id="versionNUM" name="versionNUM" value="2"> <input type="hidden" id="w" name="w" value=""> <input type="hidden" id="websiteID" value="5985208"> <input type="hidden" id="enable_as_theme" value="0"> <input type="hidden" id="onepage" value="0"> <input type="hidden" id="pjaxSupported" value="1"> <input type="hidden" id="moduleTypeNUM" class="s123-js-pjax" name="moduleTypeNUM" value=""> <input type="hidden" id="hasEcommerce" value="0"> <input type="hidden" id="pageUniqueID" class="s123-js-pjax" name="pageUniqueID" value=""> <script>        var menuScrollOffset = 60;
          var packageNUM = 1;
-         var domain = 'windmillinc.tk';
+         var domain = '620c814d418f3.site123.me';
          var languageCode = 'en';
          var multiLanCode = '';
          var globalLanguageChildLan          = '';
