--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                   <div class="row">
                      <div class="side1 col-xs-12 col-sm-6 col-md-6">
                         <div> <span class="footer_name website-name-preview-helper">Windmill Inc</span> </div>
-                        <div>                                Copyright © 2022 All rights reserved
+                        <div>                                Copyright © 2022 All rights reserved.
                         </div>
                         
                      <div class="side2 col-xs-12 col-sm-6 col-md-6">
