--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                                     <li>Runs Windows 11 home</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action"><button class="btn btn-primary btn-block btn-xl order-pricing-table-btn" data-module="620c9fcdd6c05" data-unique-page="620c9fce818b5" data-tranw="">Order Now</button></div>
+                              <div class="pricing-m-action"><button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce818b5" data-tranw="">Order Now</button></div>
                            </div>
                         </div>
                      </div>
