--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@
                   <div class="container" data-aos="fade-up">
                      <div class="row pricing-m ">
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
+                           <form action="https://formspree.io/f/xoqrdwdd" method="POST">
                            <div class="pricing-m-box  preview-highlighter" data-unique-id="620c9fce8c657">
                               <div class="pricing-m-title">
                                  <h3>Windbook - V2</h3>
@@ -529,8 +530,9 @@
                                     <li>Runs Windows 11 home</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action"><button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce818b5" data-tranw="">Order Now</button></div>
+                              <div class="pricing-m-action"><button type="submit" value="Windbook-V4" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce818b5" data-tranw="">Order Now</button></div>
                            </div>
+                           </form>
                         </div>
                      </div>
                   </div>
