--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                     <li>Runs Chromium OS</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action"><button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button></div>
+                              <div class="pricing-m-action"><button type="submit" value="Windbook-V2" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce8c657" data-tranw="">Order Now</button></div>
                            </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
@@ -510,7 +510,7 @@
                                     <li>Runs Chromium OS</li>
                                  </ul>
                               </div>
-                              <div class="pricing-m-action"><button class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce86ece" data-tranw="">Order Now</button></div>
+                              <div class="pricing-m-action"><button type="submit" value="Windbook-V3" class="btn btn-primary btn-block btn-xl" data-module="620c9fcdd6c05" data-unique-page="620c9fce86ece" data-tranw="">Order Now</button></div>
                            </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
