--- a/index.html
+++ b/index.html
@@ -462,10 +462,12 @@
                   <div data-aos="fade-up" class="container-fluid page_header_style noBackground">
                      <div class="row">
                         <div class="container moduleTitleContainer">
+                           <form action="https://formspree.io/f/xoqrdwdd" method="POST">
                            <div class="row modulesTitle text-center">
                               <div class="col-xs-12">
                                  <div class="page-header-wrap">
                                     <H2 id="section-620c9fcdd6c05-title"  class="s123-page-header  ">Pricing</H2>
+                                    <input type="email" placeholder="Enter email before you order" name="email" requied>
                                     <hr class="small">
                                  </div>
                               </div>
@@ -476,7 +478,6 @@
                   <div class="container" data-aos="fade-up">
                      <div class="row pricing-m ">
                         <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
-                           <form action="https://formspree.io/f/xoqrdwdd" method="POST">
                            <div class="pricing-m-box  preview-highlighter" data-unique-id="620c9fce8c657">
                               <div class="pricing-m-title">
                                  <h3>Windbook - V2</h3>
