--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
             <ul>
                <!-- Website Menu Pages --> 
                <li class="moduleMenu active"><a class="page-unique homepageMenu" href="/"><span class="txt-container">Home</span></a></li>
-               <li class="moduleMenu" data-menu-module-id="620c9fcdd6c05"><a class="page-unique" href="/pricing"><span class="txt-container">Pricing</span></a></li>
+               <li class="moduleMenu" data-menu-module-id="620c9fcdd6c05"><a class="page-unique" href="/pricing"><span class="txt-container"></span></a></li>
                <li class="moduleMenu" data-menu-module-id="5b0a4ba50e4e8"><a class="page-unique" href="/about"><span class="txt-container">About</span></a></li>
-               <li class="moduleMenu" data-menu-module-id="620c9f05d6bca"><a class="page-unique" href="/donate"><span class="txt-container">Donate</span></a></li>
+               <li class="moduleMenu" data-menu-module-id="620c9f05d6bca"><a class="page-unique" href="/donate"><span class="txt-container"></span></a></li>
                <li class="moduleMenu" data-menu-module-id="620ca974d6c68"><a class="page-unique" href="/jobs"><span class="txt-container">Jobs</span></a></li>
                <!-- Website Footer Pages --> 
             </ul>
