--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <link rel="dns-prefetch preconnect" href="https://static.s123-cdn-static-d.com" crossorigin="anonymous"/>
       <link rel="preload" href="https://static1.s123-cdn-static-a.com/ready_uploads/media/34155/2000_5cde6e763c693.jpg" as="image">
       <!-- Favicon --> 
-      <link rel="shortcut icon" href="https://cdn-cms-s.f-static.net/manager/websites/site123_website/files/logos/brand_files_2020/Icons/Png/Icon_blue.png?v=n8158" type="image/x-icon">
-      <link rel="icon" href="https://cdn-cms-s.f-static.net/manager/websites/site123_website/files/logos/brand_files_2020/Icons/Png/Icon_blue.png?v=n8158" type="image/x-icon">
+      <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
+      <link rel="icon" href="/logo.png" type="image/x-icon">
       <link rel="manifest" href="https://cdn-cms-s.f-static.net/versions/2/css/manifest.json?w=&orderScreen=&websiteID=5985208&onlyContent=&tranW=&v=css_n152_31566608&wd=620c814d418f3.site123.me">
       <!-- Status Bar -->
       <meta name="apple-mobile-web-app-status-bar-style" content="default">
