--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                               <div class="col-xs-12">
                                  <div class="page-header-wrap">
                                     <H2 id="section-620c9fcdd6c05-title"  class="s123-page-header  ">Pricing</H2>
-                                    <input type="email" style="width: 150px;" placeholder="Enter email before you order" name="email" requied>
+                                    <input type="email" style="width: 150px;" placeholder="Enter email before you order" name="email" requied="required">
                                     <hr class="small">
                                  </div>
                               </div>
