--- a/about/index.html
+++ b/about/index.html
@@ -460,7 +460,7 @@
                      <div class="row text-center">
                         <div class='col-xs-12 '>
                            <!-- Images --> 
-                           <div class="text-center"> <img class="lazyload" data-src="https://static1.s123-cdn-static-a.com/ready_uploads/media/5748/400_5cda5c058a6df.jpg" alt="About"/> </div>
+                           <div class="text-center"> <img class="lazyload" data-src="/me.png" alt="About"/> </div>
                            <div class="responsive-handler fr-view breakable ">Hi I&#39;m Max and I am the ceo of Windmill INC.<br>Our goal is to give our customers the right software on the right pcs at the right price with the right customer support.  We are based in havelock north and only service the north island of the great new zealand as I don&#39;t think we will be needing to serve the other island but if you are interested you will need to pay postage.  as of now we have a very limited number of employees and a large number of them are in high school so if you are looking for a job then as long as you are in intermediate or high school you are welcome to join us for an intern ship.</div>
                         </div>
                      </div>
