--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                               <div class="pricing-m-title">
                                  <h3>Windbook - V4</h3>
                               </div>
-                              <div class="pricing-m-price" ><span data-multi-currency-symbol-only="true" class="pricing-m-price-value">&#78;&#90;&#36;</span><span data-multi-currency-price-only="true">1150</span><span class="pricing-m-price-period">/Month</span></div>
+                              <div class="pricing-m-price" ><span data-multi-currency-symbol-only="true" class="pricing-m-price-value">&#78;&#90;&#36;</span><span data-multi-currency-price-only="true">11500000</span><span class="pricing-m-price-period">/Month</span></div>
                               <div class="pricing-m-features">
                                  <ul>
                                     <li>based on Dell Inspiron 3000</li>
