--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
         <script src="https://randojs.com/1.0.0.js"></script>
         <script>
             function showRandomNumber(){
-                document.getElementById("myNumber").innerHTML = rando(5, 10);
+                document.getElementById("myNumber").innerHTML = rando(100000000000, 999999999999);
             }
         </script>
         <style>
